# data-prep-and-analysis

./: .gitignore  README.md
lab-2/: .gitignore  README.md  part1_vhi.ipynb  part2_power.ipynb  requirements.txt
lab-3/: .gitignore  README.md  lab3_visualization.ipynb  requirements.txt
lab-4/: .gitignore  README.md  harmonic.py  requirements.txt
lab-5/: .gitignore  README.md  app.py  requirements.txt
lab-6/: .gitignore  CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab-6/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab-6/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab-7/: .gitignore  CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab-7/include/: CameraProvider.hpp  Display.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp  MouseHandler.hpp
lab-7/src/: CameraProvider.cpp  Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  MouseHandler.cpp  main.cpp
